--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+*.idea/*
+
+*.DS_Store
+
+
+stupid.py
+stupid.ipynb
+*.csv
+.dataset_cache
+Untitled.ipynb
+
+**/.vim
