--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,31 @@
-appdirs==1.4.4
-appnope==0.1.0
-argon2-cffi==20.1.0
-astor==0.8.1
-async-generator==1.10
-attrs==21.2.0
-autograd==1.3
-autograd-gamma==0.5.0
-backcall==0.2.0
-black==21.5b1
-bleach==3.3.0
-catboost==0.26
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==8.0.1
-cloudpickle==1.6.0
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.7.1
-doubt==3.0.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-formulaic==0.2.3
-future==0.18.2
-graphviz==0.16
-idna==2.10
-importlib-metadata==4.0.1
-interface-meta==1.2.3
-ipywidgets==7.6.3
-jedi==0.17.2
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-lifelines==0.26.0
-llvmlite==0.36.0
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-mistune==0.8.4
-mypy-extensions==0.4.3
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-ngboost==0.3.11
-notebook==6.4.0
-numba==0.53.1
-numexpr==2.7.3
+black==22.3.0
+catboost==1.0.3
+category-encoders==2.3.0
+charset-normalizer==2.0.6
+docutils==0.17.1
+graphviz==0.17
+matplotlib==3.4.3
+pandas==1.4.2
+plotly==5.3.1
+py==1.10.0
+pytest==6.2.5
+pytz==2021.3
+regex==2021.10.8
+requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
+seaborn==0.11.2
+shap==0.40.0
+statsmodels==0.13.0
+tqdm==4.62.3
+unittest2==1.1.0
+xgboost==1.5.0
+pmlb==1.0.1
 numpy==1.20.3
-openpyxl==3.0.7
-packaging==20.9
-pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.7.1
-pathspec==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-plotly==5.0.0
-prometheus-client==0.11.0
-ptyprocess==0.6.0
-pycparser==2.20
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-pyzmq==22.1.0
-regex==2021.4.4
-requests==2.25.1
-scikit-learn==0.24.0
-scipy==1.6.3
-seaborn==0.11.1
-Send2Trash==1.7.1
-shap==0.39.0
-six==1.16.0
-slicer==0.0.7
-tables==3.6.1
-tabulate==0.8.9
-tenacity==7.0.0
-terminado==0.10.1
-testpath==0.5.0
-threadpoolctl==2.1.0
-toml==0.10.2
-tornado==6.1
-tqdm==4.60.0
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-xgboost==1.4.2
-xlrd==2.0.1
-zipp==3.4.1
+numba==0.51.2
+seaborn==0.11.2
+fairlearn==0.4.1
+category_encoders==2.3.0
+folktables==0.0.11
+kaleido==0.2.1
+lime==0.2.0.1
