--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ charset-normalizer==2.0.6
 docutils==0.17.1
 graphviz==0.17
 matplotlib==3.4.3
-pandas==1.4.2
+pandas
 plotly==5.3.1
 py==1.10.0
 pytest==6.2.5
