--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ requests==2.26.0
 scikit-learn==1.0
 scipy==1.7.1
 seaborn==0.11.2
-shap==0.40.0
+shap==0.41.0
 statsmodels==0.13.0
 tqdm==4.62.3
 unittest2==1.1.0
@@ -31,3 +31,5 @@ kaleido==0.2.1
 lime==0.2.0.1
 similaritymeasures==0.4.4
 kaleido==0.2.1
+folktables==0.0.11
+xgboost==1.6.1
