--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ matplotlib==3.3.4
 scipy==1.9.3
 seaborn==0.12.1
 scikit-learn==1.1.3
-xgboost==1.7.0
+xgboost==1.7.3
 shap==0.41.0
 folktables==0.0.11
+tqdm==4.62.3
+pandas==1.4.3
